public/css/style.css
:root {
    --bg-primary-color: #00407C; /*dark navy blue*/
    --bg-secondary-color: #ADCDE9; /*light blue*/
    --bg-light-color: #E6F0F8; /*lighter white*/
    --btn-primary-color: #00407C; /*dark navy blue*/
    --btn-white-color: #FFFFFF; /*white*/
    --text-info-color: #5C8AB1; /*grayish*/
    --text-primary-color: #00407C; /*dark navy blue*/
    --text-warning-color: #FFFF00; /*yellow*/
}

body, html {
    width: 100%;
    height: 100%;
}

.bg-log-reg {
    background-image: url("/assets/blue-blue-bg.png");
    background-size: cover;
    height: 100vh;
}

.bg-home {
    background-color: var(--bg-secondary-color);
    background-image: url("/assets/Home.png");
    background-size: cover;
    height: 100vh;
}

body {
    font-family: "Montserrat", sans-serif;
}

.bungee-font {
    font-family: "Bungee", cursive;
}

.bg-primary {
    background-color: var(--bg-primary-color) !important;
}

.bg-secondary {
    background-color: var(--bg-secondary-color) !important;
}

.bg-light {
  background-color: var(--bg-light-color) !important;
}

.btn-primary {
    background-color: var(--btn-primary-color) !important;
}

.btn-white {
    background-color: var(--btn-white-color) !important;
}

.text-primary {
    color: var(--text-primary-color) !important;
}

.text-warning {
    color: var(--text-warning-color) !important;
}

.text-info {
    color: var(--text-info-color) !important;
}

.border-primary {
    border-color: var(--bg-primary-color) !important;
}

.successful-img {
    width: 20%;
}

.container-fluid {
    padding-left: 0px !important;
}

.table-block {
    display: block;
    height: 500px;
    overflow: auto;
    position: relative;
}

.table-block-300 {
    display: block;
    height: 333px;
    overflow: auto;
    position: relative;
}

.table-header {
    position: sticky;
    top: 0;
}

.w-20 {
    width: 20%;
}

.w-10 {
    width: 10%;
}

.w-15 {
    width: 15%;
}

.table-icon {
    height: 35px;
}

.rounded {
    border-radius: 8% !important;
}

